--- a/package.json
+++ b/package.json
@@ -14,12 +14,15 @@
     "axios": "^1.8.2",
     "bcryptjs": "^3.0.2",
     "class-variance-authority": "^0.7.1",
+    "cloudinary": "^2.5.1",
     "clsx": "^2.1.1",
     "dotenv": "^16.4.7",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.479.0",
     "mongoose": "^8.12.1",
+    "multer": "^1.4.5-lts.1",
     "next": "15.2.1",
+    "next-cloudinary": "^6.16.0",
     "nodemailer": "^6.10.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
